--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
 </head>
 
 <body>
-  <div class="container">
-    <div class="card">
-      <img src="images/image-qr-code.png" 
-      alt="qr-code">
-
-      <div class="text">
-        <h2>Improve your front-end  skills by building projects</h2>
-        <p>Scan the QR to visit Frontend Mentor and take your coding skills to  the next level</p>
-    </div>
+  <main>
+    <div class="container">
+      <div class="card">
+        <img src="images/image-qr-code.png"
+        alt="qr-code">
+        <div class="text">
+          <h2>Improve your front-end  skills by building projects</h2>
+          <p>Scan the QR to visit Frontend Mentor and take your coding skills to  the next level</p>
+      </div>
     
+      </div>
     </div>
-  </div>
+  </main>
 
 </body>
 
