--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <main>
+  <main class="main">
     <div class="container">
       <div class="card">
         <img src="images/image-qr-code.png"
